<resources>
    <string name="app_name">Toko Sumber Ulum App</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="et_password_confirm">Ulangi Password</string>
    <string name="login_button">Masuk</string>
    <string name="invoice_button">Buat Invoice Baru</string>
    <string name="stock_button">Barang Masuk</string>
    <string name="productedit_button">Edit Data Produk</string>
    <string name="product_button">Tambah Produk Baru</string>
    <string name="uregister_button">Daftar Akun Baru</string>
    <string name="label_button_history">Riwayat Transaksi</string>
    <string name="et_nama">Nama Lengkap</string>
    <string name="label_search">Cari…</string>
    <string name="register_button">Daftar</string>
    <string name="product_name">Nama Produk</string>
    <string name="capital_price">Harga Modal</string>
    <string name="retail_price">Harga Ecer</string>
    <string name="wholesale_price">Harga Grosir</string>
    <string name="weight">Berat Produk</string>
    <string name="stock">Stok</string>
    <string name="label_verifikasi_desc">Verifikasi akun telah dikirimkan melalui email.</string>
    <string name="label_forgot_desc">Email reset password akan dikirimkan ke email:</string>
    <string name="label_forgot_confirm_desc">Silahkan masukkan password baru anda!</string>
    <string name="label_button_retry">Coba Lagi</string>
    <string name="label_button_logout">Keluar</string>
    <string name="label_button_send">Kirim</string>
    <string name="label_button_forgot_password">Lupa Password?</string>
    <string name="label_loading">Loading…</string>

    <string-array name="product_type">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Lain-lain</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>