<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

        <variable
            name="isCountDownEnabled"
            type="androidx.databinding.ObservableBoolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:elevation="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/AppTheme.AppBarOverlay" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/label_verifikasi_desc"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="46dp"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorSecondary"
                    tools:text="sanjayajosep@gmail.com" />

                <TextView
                    android:id="@+id/tvCountdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="46dp"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@android:color/white"
                    android:visibility="@{isCountDownEnabled ? View.VISIBLE : View.GONE}"
                    tools:text="Mohon tunggu 15 detik.." />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRetry"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{listener}"
                    android:paddingStart="67dp"
                    android:paddingEnd="67dp"
                    android:text="@string/label_button_retry"
                    android:textColor="?attr/colorOnSecondary"
                    android:visibility="@{isCountDownEnabled ? View.GONE : View.VISIBLE}"
                    app:backgroundTint="?attr/colorSecondary"
                    app:cornerRadius="@dimen/defaultRadius" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogout"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{listener}"
                    android:paddingStart="67dp"
                    android:paddingEnd="67dp"
                    android:text="@string/label_button_logout"
                    android:textColor="?attr/colorOnSecondary"
                    android:visibility="@{isCountDownEnabled ? View.GONE : View.VISIBLE}"
                    app:backgroundTint="?attr/colorSecondary"
                    app:cornerRadius="@dimen/defaultRadius" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>

